Дополнила элементом экранирования