@@ -4,6 +4,7 @@ import jdk.dynalink.linker.support.TypeUtilities;
 
 import java.io.*;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.charset.StandardCharsets;
 import java.util.Scanner;
 
@@ -26,10 +27,15 @@ public class SerializationDemo {
     /**
      * Установленная в настройках системы строка разрыва строк
      */
-    private final static String SP = System.getProperty("line.separator");
+    private final static String SEPARATE = System.getProperty("line.separator");
+    /**
+     * "Символ" экранирования
+     */
+    private final static String ESC_CHR = "%0";
 
     public static void main(String[] args) throws IllegalAccessException {
-        Person person = new Person("Иван", 1999, 987.78, 'И');
+//        Person person = new Person("Иван", 1999, 987.78, 'И');
+        Person person = new Person("", 1999, 987.78, 'И');
         System.out.println("Object before serialization  => " + person.toString());
         serialize(person, "primitiveObj.bin");
         System.out.println("Object after deserialization  => " + deSerialize("primitiveObj.bin").toString());
@@ -46,15 +52,15 @@ public class SerializationDemo {
         Field[] fields = aClass.getDeclaredFields();
         File f = new File(file);
         try (FileWriter writer = new FileWriter(f, StandardCharsets.UTF_8)) {
-            writer.write(aClass.getName() + SP);// запишу информацию о классе
+            writer.write(aClass.getName() + SEPARATE);// запишу информацию о классе
             for (Field fld : fields) {
                 fld.setAccessible(true); // доступ к приватному полю
                 Class clazz = fld.getType();
                 String typeName = clazz.getTypeName();
                 //для каждого поля записываем в файл его имя тип и значение для текущего объекта
-                writer.write(fld.getName() + SP);
-                writer.write(typeName + SP);
-                writer.write(fld.get(object) + SP);
+                writer.write(fld.getName() + SEPARATE);
+                writer.write(typeName + SEPARATE);
+                writer.write(ESC_CHR + fld.get(object) + ESC_CHR + SEPARATE);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -80,10 +86,11 @@ public class SerializationDemo {
             while (input.hasNext()) {
                 if (c == null) {// следующая строка в файле информация о классе
                     c = Class.forName(input.next());
-                    obj = c.newInstance();
+                    obj = c.getDeclaredConstructor().newInstance();//Constructor.c.newInstance();
                 } else {// все остальное относится к филдам
                     if (tempField == null) {
-                        tempField = obj.getClass().getDeclaredField(input.next());
+                        String fieldName = input.next();
+                        tempField = obj.getClass().getDeclaredField(fieldName);
                         tempField.setAccessible(true);
                     } else if (tempType == null) {
                         typeName = input.next();
@@ -93,26 +100,35 @@ public class SerializationDemo {
                             tempType = TypeUtilities.getPrimitiveTypeByName(typeName);
                         }
                     } else {
+                        String inputNext = input.next();
+                        int formIndex = inputNext.indexOf(ESC_CHR) + ESC_CHR.length();
+                        int toIndex = inputNext.indexOf(ESC_CHR, ESC_CHR.length() - 1);
+                        String strValue = inputNext.substring(formIndex, toIndex);
                         if (tempField.getType().isPrimitive()) {
-                            if (tempField.getType().equals(Character.TYPE)) {// т.к. мы неизвестно какие типы полей есть у этого класса, то перебираем все
-                                tempField.setChar(obj, input.next().charAt(0));
+                            // т.к. неизвестно какие типы полей есть у этого класса, то перебираем все
+                            if (tempField.getType().equals(Character.TYPE)) {
+                                tempField.setChar(obj, strValue.charAt(0));
                             } else if (tempField.getType().equals(Integer.TYPE)) {
-                                tempField.setInt(obj, Integer.parseInt(input.next()));
+                                tempField.setInt(obj, Integer.parseInt(strValue));
                             } else if (tempField.getType().equals(Double.TYPE)) {
-                                tempField.setDouble(obj, Double.parseDouble(input.next()));
+                                tempField.setDouble(obj, Double.parseDouble(strValue));
                             } else if (tempField.getType().equals(Byte.TYPE)) {
-                                tempField.setByte(obj, Byte.parseByte(input.next()));
+                                tempField.setByte(obj, Byte.parseByte(strValue));
                             } else if (tempField.getType().equals(Short.TYPE)) {
-                                tempField.setShort(obj, Short.parseShort(input.next()));
+                                tempField.setShort(obj, Short.parseShort(strValue));
                             } else if (tempField.getType().equals(Long.TYPE)) {
-                                tempField.setLong(obj, Long.parseLong(input.next()));
+                                tempField.setLong(obj, Long.parseLong(strValue));
                             } else if (tempField.getType().equals(Float.TYPE)) {
-                                tempField.setFloat(obj, Float.parseFloat(input.next()));
+                                tempField.setFloat(obj, Float.parseFloat(strValue));
                             } else if (tempField.getType().equals(Boolean.TYPE)) {
-                                tempField.setBoolean(obj, Boolean.parseBoolean(input.next()));
+                                tempField.setBoolean(obj, Boolean.parseBoolean(strValue));
                             }
                         } else if (tempField.getType().equals(Class.forName("java.lang.String"))) {
-                            tempField.set(obj, input.next());
+                            if (strValue.length() > 0) {
+                                tempField.set(obj, strValue);
+                            } else {
+                                tempField.set(obj, "");
+                            }
                         } else {
                             throw new IllegalArgumentException("Not primitive or String type : " + tempField.getType());
                         }
@@ -135,6 +151,8 @@ public class SerializationDemo {
             e.printStackTrace();
         } catch (NoSuchFieldException e) {
             System.out.println("Не найдено поле");
+            e.printStackTrace();
+        } catch (NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
         return obj;
